// $Id$
// $Name$

Image Picker  for D7 in DRUPAL-7--1, 20011-01-22
------------------------------------
by hutch, fixed jpeg quality issue #1036216
  fixed rows per page bug #1038288

Image Picker  for D7 in DRUPAL-7--1, 20011-01-22
------------------------------------
by hutch, delete image insert page not working #1033952

Image Picker  for D7 in DRUPAL-7--1, 20011-01-08
------------------------------------
by hutch, more import fixes

Image Picker  for D7 in DRUPAL-7--1, 20011-01-03
------------------------------------
by hutch, reworked import

Image Picker  for D7 in DRUPAL-7--1, 20011-01-02
------------------------------------
by hutch, fixed db_delete bug #1012008

Image Picker  for D7 in DRUPAL-7--1, 20010-12-26
------------------------------------
by hutch, removed jquery_update check

Image Picker  for D7 in DRUPAL-7--1, 20010-12-13
------------------------------------
by hutch, added PECL uploadprogress support

Image Picker  for D7 in DRUPAL-7--1, 20010-12-13
------------------------------------
by hutch  fixed upload progress

Image Picker  for D7 in DRUPAL-7--1, 20010-12-09
------------------------------------
by hutch, fixed iframe js

Image Picker  for D7 in DRUPAL-7--1, 20010-12-01
------------------------------------
by hutch, added imagepicker_variables table

Image Picker  for D7 in DRUPAL-7--1, 20010-11-30
------------------------------------
by hutch, fixed block paste

Image Picker  for D7 in DRUPAL-7--1, 20010-11-08
------------------------------------
by hutch, added date format to config

Image Picker  for D7 in DRUPAL-7--1, 20010-10-28
------------------------------------
by hutch, fixed bug in enctype in upload form

Image Picker  for D7 in DRUPAL-7--1, 20010-10-24
------------------------------------
by hutch, fixed form theming

Image Picker  for D7 in DRUPAL-7--1, 20010-10-23
------------------------------------
by hutch, fixed colorbox integration

Image Picker  for D7 in DRUPAL-7--1, 20010-10-21
------------------------------------